--- a/index.html
+++ b/index.html
@@ -5,10 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Ali Erişir IFC-Wiv</title>
+    <title>Viewer beta</title>
 </head>
 <body>
     <div id="viewer-container"></div>
+    <div id="button-container"></div>
+    <div class="ifc-property-menu">
+        <div class="ifc-property-item">
+            <div>Key</div>
+            <div class="ifc-property-value">Value</div>
+        </div>
+        <div id="ifc-property-menu-root"></div>
+    </div>
+    <div class="ifc-tree-menu">
+        <ul id="myUL">
+            <li id="tree-root">
+                <span class="caret">Beverages</span>
+                <ul class="nested">
+                    <li>Water</li>
+                    <li>Coffee</li>
+                    <li>
+                        <span class="caret">Tea</span>
+                        <ul class="nested">
+                            <li>Black Tea</li>
+                            <li>White Tea</li>
+                            <li><span class="caret">Green Tea</span>
+                                <ul class="nested">
+                                    <li>Sencha</li>
+                                    <li>Gyokuro</li>
+                                    <li>Matcha</li>
+                                    <li>Pi Lo Chun</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="checkboxes">
+        <div>
+            <input checked="true" id="IFCWALLSTANDARDCASE" type="checkbox">
+            Walls
+        </div>
+        <div>
+            <input checked="true" id="IFCSLAB" type="checkbox">
+            Slabs
+        </div>
+        <div>
+            <input checked="true" id="IFCWINDOW" type="checkbox">
+            Windows
+        </div>
+        <div>
+            <input checked="true" id="IFCFURNISHINGELEMENT" type="checkbox">
+            Furniture
+        </div>
+        <div>
+            <input checked="true" id="IFCDOOR" type="checkbox">
+            Doors
+        </div>
+        <div>
+            <input checked="true" id="IFCMEMBER" type="checkbox">
+            Curtain wall structure
+        </div>
+        <div>
+            <input checked="true" id="IFCPLATE" type="checkbox">
+            Curtain wall plates
+        </div>
+    </div>
     <script src="bundle.js"></script>
 </body>
 </html>
